[project]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "requests (>=2.32.5,<3.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
[tool.mypy]
[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude =
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
)
[tool.isort]
# максимальная длина строки
line_length = 119
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'